--- a/.gitignore
+++ b/.gitignore
@@ -162,13 +162,15 @@ data/
 docs/literature/
 docs/api_analysis/
 docs/todo/
-configuration/*.env
 machine_learning_models/LORAS/*
 machine_learning_models/MODELS/*
 machine_learning_models/EMBEDDING_MODELS/*
 .desktop
-testbench*.py
 venv_*/
+
+# Backend
+backend/src/configuration/*.env
+backend/testbench*.py
 
 # Exceptions
 !machine_learning_models/LORAS/mount ML LoRAs here.txt
