--- a/requirements_gpu.txt
+++ b/requirements_gpu.txt
@@ -7,6 +7,7 @@ urllib3==2.0.2
 python-dotenv==1.0.0
 pydantic==1.10.9
 accelerate==0.24.1
+prompt-toolkit==3.0.43
 protobuf==3.20.3
 nvitop==1.1.2
 tqdm==4.65.0
